Fix notification scrollbar color

--- a/client/src/app/menu/notification.component.scss
+++ b/client/src/app/menu/notification.component.scss
@@ -1,6 +1,9 @@
 @import '_variables';
 @import '_mixins';
 
+.content {
+  scrollbar-color: unset;
+}
 
 .notification-inbox-popover {
   padding: 10px;
